8261397: Try Catch Method Failing to Work When Dividing An Integer By 0